generare 5 numeri random

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
   <title>Js Simon</title>
 </head>
 <body>
+
+  <div>
+    <div id="numberContainer">
+
+    </div>
+
+  </div>
   
 </body>
 </html>
