--- a/index.html
+++ b/index.html
@@ -4,17 +4,35 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="script/main.js" defer></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+ <script src="script/main.js" defer></script>
   <title>Js Simon</title>
 </head>
 <body>
+  <h1>JSimon</h1>
 
-  <div>
+
+
+  <div class="container">
+
+   
     <div id="numberContainer">
-
+   
+  
     </div>
 
+
   </div>
+  
+  
+ 
+  
+
+
+
   
 </body>
 </html>
